[gd_scene load_steps=3 format=3 uid="uid://cfq2ilkwk6in7"]

[ext_resource type="Theme" uid="uid://bcm4ppy66ca6p" path="res://assets/styles/Theme.tres" id="1_0wfyh"]
[ext_resource type="Script" uid="uid://1icul3iuuyg3" path="res://scripts/main.gd" id="1_o5qli"]

[node name="Main" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0wfyh")
script = ExtResource("1_o5qli")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Warning: game has flashing lights"

[node name="Label4" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Tab - Keyboard button selection"

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "F11 - Toggle fullscreen"

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Escape - return to main menu (not pause)"

[node name="Center" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DifficultyVBox" type="VBoxContainer" parent="VBoxContainer/Center"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Center/DifficultyVBox"]
layout_mode = 2
text = "Difficulty"
horizontal_alignment = 1

[node name="Easy" type="Button" parent="VBoxContainer/Center/DifficultyVBox"]
layout_mode = 2
text = "Easy"

[node name="Normal" type="Button" parent="VBoxContainer/Center/DifficultyVBox"]
layout_mode = 2
text = "Normal"

[node name="Hard" type="Button" parent="VBoxContainer/Center/DifficultyVBox"]
layout_mode = 2
text = "Hard"

[node name="Lunatic" type="Button" parent="VBoxContainer/Center/DifficultyVBox"]
layout_mode = 2
text = "Lunatic"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/Center/DifficultyVBox"]
layout_mode = 2

[node name="Back" type="Button" parent="VBoxContainer/Center/DifficultyVBox"]
layout_mode = 2
text = "Back"

[node name="ButtonsVBox" type="VBoxContainer" parent="VBoxContainer/Center"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Center/ButtonsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Wolfish"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Play" type="Button" parent="VBoxContainer/Center/ButtonsVBox"]
layout_mode = 2
text = "Play"

[node name="Tutorial" type="Button" parent="VBoxContainer/Center/ButtonsVBox"]
layout_mode = 2
text = "How to play"

[node name="Test" type="Button" parent="VBoxContainer/Center/ButtonsVBox"]
visible = false
layout_mode = 2
text = "Test"

[node name="Exit" type="Button" parent="VBoxContainer/Center/ButtonsVBox"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Center/DifficultyVBox/Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="VBoxContainer/Center/DifficultyVBox/Normal" to="." method="_on_normal_pressed"]
[connection signal="pressed" from="VBoxContainer/Center/DifficultyVBox/Hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="VBoxContainer/Center/DifficultyVBox/Lunatic" to="." method="_on_lunatic_pressed"]
[connection signal="pressed" from="VBoxContainer/Center/DifficultyVBox/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/Center/ButtonsVBox/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Center/ButtonsVBox/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer/Center/ButtonsVBox/Test" to="." method="_on_test_pressed"]
[connection signal="pressed" from="VBoxContainer/Center/ButtonsVBox/Exit" to="." method="_on_exit_pressed"]
